--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
 		"real estate"
 	],
 	"require" : {
-		"bk2k/bootstrap-package" : "^11.0",
-		"netresearch/rte-ckeditor-image" : "^10.1"
+		"bk2k/bootstrap-package" : "^11.0"
 	},
 	"autoload" : {
 		"psr-4" : {
