--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"real estate"
 	],
 	"require" : {
-		"bk2k/bootstrap-package" : "^11.0"
+		"bk2k/bootstrap-package" : "^11.0",
+		"netresearch/rte-ckeditor-image" : "^10.1"
 	},
 	"autoload" : {
 		"psr-4" : {
