--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "chrisgruen/realty-manager",
 	"type" : "typo3-cms-extension",
-	"description" : "TYPO3 extension for v10 LTS (version before created by Olicer Klee) that provides a plugin that displays realty objects (properties, real estate), including an image gallery for each object.",
+	"description" : "TYPO3 extension for v10 LTS that provides a plugin that displays realty objects (properties, real estate), including an image gallery for each object.",
 	"homepage" : "https://github.com/chrisgruen/realty-manager",
 	"license" : "GPL-2.0-or-later",
 	"minimum-stability": "dev",
@@ -39,5 +39,8 @@
 			"cms-package-dir": "{$vendor-dir}/typo3/cms",
 			"web-dir": ".Build/Web"
 		}
+	},
+	"replace": {
+		"chrisgruen/chess-manager": "self.version"
 	}
 }
